2006-08-27  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/TestcaseGenerator.py: Bring somewhat up to date.
	* NEWS: New release name.

2006-08-26  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsLogger/_ErrorReportAssistant.py (__init__): Properly
	call Assistant.
	* src/plugins/GraphViz.py (get_event_string): Stop using cause.
	* src/Filters/Rules/Person/__init__.py (register): Add dictionary
	for private rules.
	* src/Filters/_FilterParser.py (startElement): Support parsing for
	private rules.

2006-08-26  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase.get_name_group_mapping): convert
	group as name used as a key back to unicode (bug #389)
	* src/Editors/_EditMedia.py (EditMedia.save): don't set path on
	a save
	* src/Config/_GrampsConfigKeys.py: set toolbar-on to 1 if the gconf
	schemas were not installed properly

2006-08-25  Brian Matherly  <brian@gramps-project.org>
	* src/const.py.in: Disable thumbnailer for Windows.

2006-08-25  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPerson.py: add name callback to update screen
	after a primary name change
	* src/DisplayTabs/_NameEmbedList.py: add primary name change menu item
	* src/GrampsWidgets.py: add reinitalization method to handle change of
	associated data item
	* src/DisplayModels/_MediaModel.py (MediaModel.sort_date): add
	sorting by date value instead of by text string

2006-08-25  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (preferences_activate): Use uistate to emit.
	* src/DisplayState.py (DisplayState.__signals__): Add new signal.
	* src/GrampsCfg.py (cb_name_changed): Use uistate to emit signal.
	* src/plugins/ChangeTypes.py: Clean up type name conversions; work
	over all the events, regardless of who references them.
	* src/RelLib/_GrampsType.py (get_standard_names, get_standard_xml): 
	Add methods to obtain standard type lists.

2006-08-25  Zsolt Foldvari  <zsolt.foldvari@nokia.com>